# DocuMental

./: .gitignore  MODULES.md  README.md  ROADMAP.md  TODO.md  brain.py  communication.py  config.json  const.py  monitor.py  package-lock.json  package.json  prt_mind.py  pyproject.toml  requirements.txt  run.ps1
documental/: __init__.py  brain.py  communication.py  const.py  memory.py  monitor.py  personality.py  prt_mind.py  utils.py
