[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "documental"
version = "0.1.0"
authors = [
    { name="Gemini", email="gemini@google.com" },
]
description = "A printer agent with an attitude."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "requests",
    "plyer",
    "pywin32",
    "pyttsx3",
]

[project.scripts]
documental = "documental.prt_mind:main"

[tool.setuptools]
packages = ["documental"]
